Bug 377439 - Make scrollbars live to scrollbar style changes in the system prefs, r=roc